# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/updated
# [V] version change
# ====================================================================


# 2019-01-23
#---------------------------------------------------------------------
# + add Te121 to the fit
# + add fit time to the printed fit results
# ~ split U235 into sub-groups 41 and 42 in groupNum93()
# ~ switch back to representing surface components in mBq/kg


# 2019-01-21
#---------------------------------------------------------------------
# + add U235 to groupNum93()


# 2019-01-11
#---------------------------------------------------------------------
# ~ updated config generation scripts for new backgrounds file format
# ~ create processed rootfiles after the processing is done
# ~ separate MC paths and handling for v3.1.1 and v4.0.1
# ~ separate calibrations for v00-04-04 and v-00-04-12
# ~ major refactor of the backgrounds file format
# + add updateBkgsFile300() for new backgrounds file format
# + add mcPath101() and mcPath300() for different mc paths
# + add calib300() for v00-04-12 calibrations from govinda
# + add buildData300() and buildMC300() for new processing info
# + add getInfo300() and build300() for new processing info


# 2019-01-10
#---------------------------------------------------------------------
# V switch to funcs300.py
# V switch to 300-g410-set12.py


# 2019-01-09
#---------------------------------------------------------------------
# + cut release v10.2
# ~ uses generated simulation from Pushpa and Estella
# ~ uses KimsSim v3.1.1
# ~ uses Geant4.9.6.p02


# 2018-12-17
#---------------------------------------------------------------------
# ~ redo the fits using plastic as the external


# 2018-12-14
#---------------------------------------------------------------------
# ~ fixed up the background model - it works great now!