@@ -2,8 +2,8 @@ B  1  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  2  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  3  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  4  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
-B  5  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
+#B  5  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  6  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  7  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
-B  8  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
+#B  8  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  9  copper  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
