@@ -2,8 +2,8 @@ B  1  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  2  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  3  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  4  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
-B  5  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
+#B  5  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  6  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  7  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
-B  8  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
+#B  8  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
 B  9  coppercase  Co60  Co60  GRND  1  0.1  10  v4.0.1  ./dummy.root
